--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
   <h1>Welcome to the Skript Repository</title>
   <title>Welcome!</title>
+  <p1>Welcome to the site. You can download my set of skripts on this very site. I am no longer uploading to spigotmc.org, so now I have started my own site to do this!</p1>
 </html>
